hphp/hack/test/typecheck/reactive/mayberx7_2.php.exp
File "mayberx7_2.php", line 11, characters 10-48:
Cannot invoke conditionally reactive function in reactive context, because at least one reactivity condition is not met. (Typing[4237])
File "mayberx7_2.php", line 11, characters 18-47:
Argument type is must be reactive function, non-reactive given.
File "mayberx7_2.php", line 4, characters 10-16:
This is the function declaration
